--- a/iocBoot/ioc-tmo-spectrometer-motion/Makefile
+++ b/iocBoot/ioc-tmo-spectrometer-motion/Makefile
@@ -1,15 +1,15 @@
-IOC_TOP=/reg/g/pcds/epics/ioc/common/ads-ioc/v0.2.1
+IOC_TOP=/reg/g/pcds/epics/ioc/common/ads-ioc/R0.5.0
 IOC_INSTANCE_PATH := $(shell pwd)
 
 # Set PRODUCTION_IOC to 1 to move from a testing to a production IOC:
-PRODUCTION_IOC := 0
+PRODUCTION_IOC := 1
 
 PROJECT_NAME := plc-tmo-spec
 PROJECT_PATH := ../../lcls-plc-tmo-spectrometer-motion/lcls-plc-tmo-spectrometer-motion.tsproj
 PLC := tmo_spectrometer_motion
 
 PYTMC_OPTS := 
-PREFIX := PLC:$(PLC)
+PREFIX := PLC:TMO:SPEC
 
 # With two $$, as in $$(IOC) below, this will be expanded in the
 # environment of st.cmd:
